--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <version>6.2.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+        </dependency>
 
     </dependencies>
 
